<resources>
    <string name="app_name">UIce</string>
    <string name="temp_text">Tap to change temperature</string>
    <string name="date">Date</string>
    <string name="clock">Clock</string>
    <string name="fridge">Fridge</string>
    <string name="freezer">Freezer</string>
    <string name="ice_water">Ice/Water</string>
    <string name="notes">Switch to notes view</string>
    <string name="settings">Settings</string>
    <string name="add_water">Hold to add water</string>
    <string name="add_ice">Hold to add ice</string>
    <string name="add_water_button">Water</string>
    <string name="ice1">Ice</string>
    <string name="back">back</string>
    <string name="menu">Back to main menu</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="temperature">Temperature</string>
    <string name="select">Select a temperature</string>
    <string name="nightmode">Night mode</string>
    <string name="screen_brightness">Screen Brightness:</string>
    <string name="fridge_brightness">Fridge Light Brightness:</string>
    <string name="temperature_scale">Choose a scale:</string>
    <string name="normal_ice">Normal</string>
    <string name="crushed_ice">Crushed</string>
    <string name="celsius">Celsius</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="power_freeze">Power Freeze</string>
    <string name="power_freeze_hint_text">Hold for 3 seconds</string>
    <string name="low">Low</string>
    <string name="high">High</string>
    <string name="humidity_control">Humidity Control</string>
    <string name="tap_water">Tap Water</string>
    <string name="cold_water">Cold Water</string>
</resources>